Agregada pagina producto y arreglo en carrusel inicio

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
                     <li class="nav-item ms-4 me-4 shopping-cart">
                         <a href="#">
-                            <i class="fa-solid fa-cart-shopping"></i>
+                            <i class="fa-solid fa-cart-shopping text-body-secondary"></i>
                         </a>
                     </li>
 
@@ -88,6 +88,7 @@
             </div>
         </div>
     </header>
+
 
 
     <!-- Carrusel de productos -->
@@ -218,9 +219,9 @@
     <!-- Otro carrusel de productos -->
     <section>
         <div class="container">
-            <h3>Adidas</h3>
+            <h3>Nike</h3>
         </div>
-        <div id="carouselExampleControls" class="carousel carousel-dark slide" data-bs-ride="carousel">
+        <div id="carouselExampleControls2" class="carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <div class="card-wrapper container-sm d-flex  justify-content-around">
@@ -288,6 +289,7 @@
                                 </div>
                             </div>
                         </a>
+                    </div>
                 </div>
                 <div class="carousel-item">
                     <div class="card-wrapper container-sm d-flex  justify-content-around">
@@ -324,12 +326,12 @@
                     </div>
                 </div>
                 <button class="carousel-control-prev d-none d-lg-block" type="button"
-                    data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                    data-bs-target="#carouselExampleControls2" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
                 </button>
                 <button class="carousel-control-next d-none d-lg-block" type="button"
-                    data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                    data-bs-target="#carouselExampleControls2" data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
