Separado el css del inicio con producto y se agrego boton para cambiar la iamgen del producto

--- a/producto.html
+++ b/producto.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nikedas</title>
+    <title>Nike Air Max Pulse</title>
     <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/3e6ff9a951.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/bootstrap-5.3.3-dist/css/bootstrap.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/producto.css">
 </head>
 
 <body>
@@ -72,13 +72,25 @@
             </div>
         </div>
     </nav>
+    <!-- Termino navbar -->
 
 
+    <!-- Producto -->
     <section>
         <div class="container">
             <div class="row">
                 <div class="col-12 col-md-6">
-                    <img src="assets/images/productos/producto1b.webp" class="img-fluid">
+                    <div class="product-img">
+                        <img src="assets/images/productos/producto1b.webp" class="img-fluid rounded">
+                        <div class="img-buttons">
+                            <button type="button" class="img-btn btn btn-outline-light">
+                                <i class="fa-solid fa-chevron-left"></i>
+                            </button>
+                            <button type="button" class="img-btn btn btn-outline-light">
+                                <i class="fa-solid fa-chevron-right"></i>
+                            </button>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-12 col-md-6">
                     <h3 class="producto-modelo">Air Max Pulse</h3>
@@ -113,10 +125,10 @@
                             </div>
                         </div>
                         <div class="d-flex gap-2 flex-wrap p-3" aria-label="Basic example">
-                            <button type="button mb-2" class="btn btn-outline-secondary">36</button>
-                            <button type="button mb-2" class="btn btn-outline-secondary">37</button>
-                            <button type="button mb-2" class="btn btn-outline-secondary">38</button>
-                            <button type="button mb-2" class="btn btn-outline-secondary">39</button>
+                            <button type="button mb-2" class="btn btn-outline-secondary" disabled>36</button>
+                            <button type="button mb-2" class="btn btn-outline-secondary" disabled>37</button>
+                            <button type="button mb-2" class="btn btn-outline-secondary" disabled>38</button>
+                            <button type="button mb-2" class="btn btn-outline-secondary" disabled>39</button>
                             <button type="button mb-2" class="btn btn-outline-secondary">40</button>
                             <button type="button mb-2" class="btn btn-outline-secondary">41</button>
                             <button type="button mb-2" class="btn btn-outline-secondary">42</button>
@@ -168,6 +180,9 @@
         </div>
         </div>
     </section>
+    <!-- Termino seccion producto -->
+
+
 
 
     <!-- Carrusel productos relacionados -->
@@ -291,6 +306,9 @@
                 </button>
             </div>
     </section>
+    <!-- Termino relacionados -->
+
+
 
     <!-- Footer -->
     <footer>
