--- a/admin.html
+++ b/admin.html
@@ -69,8 +69,10 @@
                     <div class="card-body">
                         <h5 class="card-title">Nike Air Max Pulse</h5>
                         <p class="card-text precio">$150.000</p>
-                        <button type="button" class="btn btn-light">
-                            <i class="fa-solid fa-pen"></i> Editar</button>
+                        <!-- Enlace para redirigir a editar.html -->
+                        <a href="editar.html" class="btn btn-light">
+                            <i class="fa-solid fa-pen"></i> Editar
+                        </a>
                         <button type="button" class="btn btn-danger">
                             <i class="fa-solid fa-trash"></i> Borrar</button>
                     </div>
@@ -80,8 +82,10 @@
                     <div class="card-body">
                         <h5 class="card-title">Nike Air Max Pulse</h5>
                         <p class="card-text precio">$150.000</p>
-                        <button type="button" class="btn btn-light">
-                            <i class="fa-solid fa-pen"></i> Editar</button>
+                        <!-- Enlace para redirigir a editar.html -->
+                        <a href="editar.html" class="btn btn-light">
+                            <i class="fa-solid fa-pen"></i> Editar
+                        </a>
                         <button type="button" class="btn btn-danger">
                             <i class="fa-solid fa-trash"></i> Borrar</button>
                     </div>
@@ -91,8 +95,10 @@
                     <div class="card-body">
                         <h5 class="card-title">Nike Air Max Pulse</h5>
                         <p class="card-text precio">$150.000</p>
-                        <button type="button" class="btn btn-light">
-                            <i class="fa-solid fa-pen"></i> Editar</button>
+                        <!-- Enlace para redirigir a editar.html -->
+                        <a href="editar.html" class="btn btn-light">
+                            <i class="fa-solid fa-pen"></i> Editar
+                        </a>
                         <button type="button" class="btn btn-danger">
                             <i class="fa-solid fa-trash"></i> Borrar</button>
                     </div>
@@ -102,8 +108,10 @@
                     <div class="card-body">
                         <h5 class="card-title">Nike Air Max Pulse</h5>
                         <p class="card-text precio">$150.000</p>
-                        <button type="button" class="btn btn-light">
-                            <i class="fa-solid fa-pen"></i> Editar</button>
+                        <!-- Enlace para redirigir a editar.html -->
+                        <a href="editar.html" class="btn btn-light">
+                            <i class="fa-solid fa-pen"></i> Editar
+                        </a>
                         <button type="button" class="btn btn-danger">
                             <i class="fa-solid fa-trash"></i> Borrar</button>
                     </div>
@@ -113,8 +121,10 @@
                     <div class="card-body">
                         <h5 class="card-title">Nike Air Max Pulse</h5>
                         <p class="card-text precio">$150.000</p>
-                        <button type="button" class="btn btn-light">
-                            <i class="fa-solid fa-pen"></i> Editar</button>
+                        <!-- Enlace para redirigir a editar.html -->
+                        <a href="editar.html" class="btn btn-light">
+                            <i class="fa-solid fa-pen"></i> Editar
+                        </a>
                         <button type="button" class="btn btn-danger">
                             <i class="fa-solid fa-trash"></i> Borrar</button>
                     </div>
@@ -124,8 +134,10 @@
                     <div class="card-body">
                         <h5 class="card-title">Nike Air Max Pulse</h5>
                         <p class="card-text precio">$150.000</p>
-                        <button type="button" class="btn btn-light">
-                            <i class="fa-solid fa-pen"></i> Editar</button>
+                        <!-- Enlace para redirigir a editar.html -->
+                        <a href="editar.html" class="btn btn-light">
+                            <i class="fa-solid fa-pen"></i> Editar
+                        </a>
                         <button type="button" class="btn btn-danger">
                             <i class="fa-solid fa-trash"></i> Borrar</button>
                     </div>
@@ -135,8 +147,10 @@
                     <div class="card-body">
                         <h5 class="card-title">Nike Air Max Pulse</h5>
                         <p class="card-text precio">$150.000</p>
-                        <button type="button" class="btn btn-light">
-                            <i class="fa-solid fa-pen"></i> Editar</button>
+                        <!-- Enlace para redirigir a editar.html -->
+                        <a href="editar.html" class="btn btn-light">
+                            <i class="fa-solid fa-pen"></i> Editar
+                        </a>
                         <button type="button" class="btn btn-danger">
                             <i class="fa-solid fa-trash"></i> Borrar</button>
                     </div>
@@ -146,8 +160,10 @@
                     <div class="card-body">
                         <h5 class="card-title">Nike Air Max Pulse</h5>
                         <p class="card-text precio">$150.000</p>
-                        <button type="button" class="btn btn-light">
-                            <i class="fa-solid fa-pen"></i> Editar</button>
+                        <!-- Enlace para redirigir a editar.html -->
+                        <a href="editar.html" class="btn btn-light">
+                            <i class="fa-solid fa-pen"></i> Editar
+                        </a>
                         <button type="button" class="btn btn-danger">
                             <i class="fa-solid fa-trash"></i> Borrar</button>
                     </div>
