--- a/categoria.html
+++ b/categoria.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nikedas</title>
+    <title>Nikedas - Categorías</title>
     <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/3e6ff9a951.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/bootstrap-5.3.3-dist/css/bootstrap.css">
@@ -15,7 +15,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand pe-3 ms-4" href="#">
+            <a class="navbar-brand pe-3 ms-5" href="#">
                 <img src="assets/images/logo.png" alt="Bootstrap" width="56">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -54,19 +54,31 @@
                         </ul>
                     </li>
                 </ul>
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 d-flex align-items-center">
-
-                    <li class="nav-item d-flex">
+                <ul class="navbar-nav ms-auto me-4 mb-2 mb-lg-0">
+                    <li class="nav-item d-flex mx-auto">
                         <input class="form-control me-2 ms-4" type="search" placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-secondary" type="submit">Search</button>
                     </li>
 
-                    <li class="nav-item ms-4 me-4 shopping-cart">
-                        <a href="#">
+                </ul>
+
+                <ul class="navbar-nav me-5 mb-2 mb-lg-0 d-flex flex-row align-items-center gap-3">
+                    
+                    <li class="nav-item shopping-cart">
+                        <a href="carrito.html">
                             <i class="fa-solid fa-cart-shopping text-body-secondary"></i>
                         </a>
                     </li>
 
+                    <li class="nav-item dropstart profile">
+                        <a href="#" class="nav-link dropdown-toggle " role="button" data-bs-toggle="dropdown">
+                            <i class="fa-solid fa-user"></i>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="login.html">Iniciar sesion</a></li>
+                            <li><a class="dropdown-item" href="registro.html">Registro</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -95,7 +107,7 @@
 
 
             <div class="row">
-                <div class="filtros col-2">
+                <div class="filtros col-12 col-md-2">
                     <div class="accordion accordion-flush mt-2" id="accordionFlushExample">
                         <div class="accordion-item">
                             <h2 class="accordion-header">
@@ -154,7 +166,7 @@
                 </div>
 
 
-                <div class="product-container col-10">
+                <div class="product-container col-12 col-md-10">
                     <div class="card" style="max-width: 18rem;">
                         <img src=" assets/images/productos/producto1a.webp" class="card-img-top img-fluid" alt="...">
                         <div class="card-body">
