--- a/producto.html
+++ b/producto.html
@@ -16,7 +16,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand pe-3 ms-4" href="#">
+            <a class="navbar-brand pe-3 ms-5" href="#">
                 <img src="assets/images/logo.png" alt="Bootstrap" width="56">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -55,19 +55,31 @@
                         </ul>
                     </li>
                 </ul>
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 d-flex align-items-center">
-
-                    <li class="nav-item d-flex">
+                <ul class="navbar-nav ms-auto me-4 mb-2 mb-lg-0">
+                    <li class="nav-item d-flex mx-auto">
                         <input class="form-control me-2 ms-4" type="search" placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-secondary" type="submit">Search</button>
                     </li>
 
-                    <li class="nav-item ms-4 me-4 shopping-cart">
-                        <a href="#">
+                </ul>
+
+                <ul class="navbar-nav me-5 mb-2 mb-lg-0 d-flex flex-row align-items-center gap-3">
+                    
+                    <li class="nav-item shopping-cart">
+                        <a href="carrito.html">
                             <i class="fa-solid fa-cart-shopping text-body-secondary"></i>
                         </a>
                     </li>
 
+                    <li class="nav-item dropstart profile">
+                        <a href="#" class="nav-link dropdown-toggle " role="button" data-bs-toggle="dropdown">
+                            <i class="fa-solid fa-user"></i>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="login.html">Iniciar sesion</a></li>
+                            <li><a class="dropdown-item" href="registro.html">Registro</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
