--- a/registro.html
+++ b/registro.html
@@ -61,7 +61,9 @@
                 <label for="email" class="form-label">Correo Electrónico</label>
                 <input type="email" class="form-control" id="email" name="email" required>
             </div>
-            <button type="button" class="btn btn-dark">Registrarse</button>
+            <div class="btn-registro">
+                <button type="button" class="btn btn-dark">Registrarse</button>
+            </div>
         </form>
     </div>
 
