--- a/editar.html
+++ b/editar.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/3e6ff9a951.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/bootstrap-5.3.3-dist/css/bootstrap.css">
-    <link rel="stylesheet" href="assets/css/producto.css">
+    <link rel="stylesheet" href="assets/css/admin.css">
 </head>
 
 <body>
