--- a/login.html
+++ b/login.html
@@ -40,7 +40,7 @@
         <!-- Título del formulario -->
         <h3 class="text-center mb-4">Inicio de Sesión</h3>
         <!-- Formulario de inicio de sesión -->
-        <form action="procesar_login.php" method="POST">
+        <form  class="login-form" action="procesar_login.php" method="POST">
             <div class="mb-3">
                 <label for="correo" class="form-label">Correo Electrónico</label>
                 <input type="email" class="form-control" id="correo" name="correo" required>
@@ -49,7 +49,13 @@
                 <label for="contraseña" class="form-label">Contraseña</label>
                 <input type="password" class="form-control" id="contraseña" name="contraseña" required>
             </div>
-            <div class="d-grid gap-2">
+            <div class="mb-3">
+                <a href="recuperar.html"><p>¿Olvidaste tu contraseña?</p></a>
+                <p>¿No tienes cuenta? <a href="registro.html">Regístrate aquí</a></p>
+            </div>
+
+            <div class="d-flex justify-content-end">
                 <button type="submit" class="btn btn-dark">Iniciar Sesión</button>
             </div>
-            <div
+        </form>
+    </div>
